--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Hypnosis" />
+    <meta property="og:description" content="It's time to take you life under control" />
+    <meta property="og:url" content="https://pavelzelencow.github.io/" />
+    <meta property="og:image" content="https://pavelzelencow.github.io/images/1.jpg" />
     <title>Hypnosis</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
