--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="about__item">
                         <div class="about__item-box">
                             <h3 class="about__item-title">
-                                Lack 
+                                Lack <br>
                                 of Sleep
                             </h3>
                             <p class="about__item-text">
